# docs/swagger.yaml
@@ -24,6 +24,37 @@ definitions:
       name:
         type: string
     type: object
+  database.Ticket:
+    properties:
+      capacity:
+        description: Number of tickets booked
+        type: integer
+      email:
+        description: Email of the ticket holder
+        type: string
+      eventID:
+        description: ID of the event associated with the ticket
+        type: string
+      ticketID:
+        description: Unique ticket ID
+        type: string
+    type: object
+  database.TicketBookingReq:
+    properties:
+      capacity:
+        description: Number of tickets to book
+        type: integer
+      email:
+        description: Email of the ticket holder
+        type: string
+      event_id:
+        description: ID of the event to book
+        type: string
+    required:
+    - capacity
+    - email
+    - event_id
+    type: object
 host: 127.0.0.1:8080
 info:
   contact: {}
@@ -159,4 +190,41 @@ paths:
       summary: Update an event
       tags:
       - events
+  /tickets:
+    post:
+      consumes:
+      - application/json
+      description: Book a ticket for an event
+      parameters:
+      - description: Ticket Booking Request
+        in: body
+        name: ticket
+        required: true
+        schema:
+          $ref: '#/definitions/database.TicketBookingReq'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/database.Ticket'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties: true
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      summary: Book a ticket
+      tags:
+      - tickets
 swagger: "2.0"
