# internal/server/routes.go
@@ -15,6 +15,8 @@ func (s *FiberServer) RegisterFiberRoutes() {
 	s.App.Put("/events/:id", s.updateEvent)
 	s.App.Delete("/events/:id", s.deleteEvent)
 
+	s.App.Post("/tickets", s.bookTicket)
+
 }
 
 func (s *FiberServer) HelloWorldHandler(c *fiber.Ctx) error {
